# CPS_IOT_HW

./: Answers.md  README.md  SecureLock.pdsprj  SecureLock.pdsprj.LAPTOP-IGP9N95N.user.workspace
Arduino_codes/sketch_apr5a/: sketch_apr5a.ino
Client/CPSMonitoringSystemGUI/: CMakeLists.txt
Client/MonitoringSystem/: CMakeLists.txt  CMakeLists.txt.user.ca3f4c0  client.cpp  client.h  cpsapplication.cpp  cpsapplication.h  cpshistorywindow.cpp  cpshistorywindow.h  cpsmainwindow.cpp  cpsmainwindow.h  cpswindowsapitools.h
Embedded/main/: main.ino
Proteus/: SecureLock.pdsprj  SecureLock.pdsprj.DESKTOP-Q3C72CE.AliGH.workspace  SecureLock.pdsprj.LAPTOP-IGP9N95N.user.workspace
Proteus/Project Backups/: SecureLock [20240405, 08-21-31].pdsprj  SecureLock [20240405, 19-09-33].pdsprj  SecureLock [20240423, 16-05-35].pdsprj  SecureLock [20240424, 18-45-05].pdsprj  SecureLock [20240425, 15-36-47].pdsprj  SecureLock [20240425, 16-13-05].pdsprj  SecureLock [20240428, 22-45-28].pdsprj  SecureLock [20240429, 10-44-47].pdsprj  SecureLock [20240429, 10-54-39].pdsprj  SecureLock [20240429, 20-30-38].pdsprj  SecureLock [20240429, 20-53-52].pdsprj  SecureLock [20240429, 20-56-18].pdsprj  SecureLock [20240430, 12-49-33].pdsprj  SecureLock [20240430, 20-23-03].pdsprj  SecureLock [Autosaved].pdsprj
Server/: database.cpp  database.h  websocketserver.h
Server/Server/: CMakeLists.txt  database.cpp  database.h  httpserver.cpp  httpserver.h  main.cpp  websocketserver.cpp  websocketserver.h
Server/httpserver/: clientconnection.cpp  clientconnection.h  codevalidator.cpp  codevalidator.h  (+4 more)
(+3 files in other folders)
